# github-cli

./: .gitignore  CLAUDE.md  README.md  github_cli.py  main.py  pyproject.toml  pytest.ini  run.bat  run_tests.py  setup.py  test_interactive_widgets.py  test_ui_widgets.py
.kiro/specs/login-popup-improvements/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: README.md
docs/api/: README.md  actions.md  client.md  pull-requests.md  repositories.md
docs/auth/: README.md  oauth.md  tokens.md
docs/developer/: README.md
docs/models/: README.md
docs/tui/: README.md
docs/user/: README.md
github_cli/: __init__.py  __main__.py
github_cli/api/: __init__.py  actions.py  client.py  commands.py  gists.py  issues.py  notifications.py  organizations.py  projects.py  pull_requests.py  releases.py  repositories.py  search.py  statistics.py  users.py
github_cli/auth/: __init__.py  auth_notifications.py  authenticator.py  common.py  environment_adapter.py  environment_detector.py  error_handler.py  error_recovery_workflows.py  preference_manager.py  preferences.py  progress_tracker.py  responsive_layout.py  sso_handler.py  token_expiration_handler.py  token_manager.py
github_cli/git/: __init__.py  commands.py
github_cli/models/: __init__.py  issue.py  notification.py  pull_request.py  release.py  repository.py  team.py  user.py  workflow.py
github_cli/tui/: actions.py  adaptive_widgets.py  app.py  data_loader.py  error_handler.py  github_tui.tcss  notifications.py  pull_requests.py  repositories.py  responsive.py  search.py  settings.py  widget_factory.py
github_cli/ui/: __init__.py  dashboard.py  diff_viewer.py  terminal.py  terminal_old.py
github_cli/ui/auth/: README_responsive_css.md  __init__.py  accessibility.py  accessibility.tcss  auth_views.py  responsive_auth.tcss  responsive_layout.py  visual_feedback.py  visual_feedback.tcss
github_cli/ui/components/: __init__.py
github_cli/ui/dashboard/: __init__.py  dashboard.py  data_loader.py  layout_manager.py
github_cli/ui/terminal/: __init__.py  display_handlers.py  formatters.py  terminal.py
github_cli/ui/tui/: __init__.py  github_tui.tcss
github_cli/utils/: __init__.py  async_utils.py  cache.py  config.py  exceptions.py  performance.py  plugins.py  shortcuts.py
tests/: README.md  TEST_RESULTS.md  conftest.py
tests/docs/: TEST_COVERAGE_ANALYSIS.md  TEST_IMPROVEMENTS_SUMMARY.md  TEST_ORGANIZATION_SUMMARY.md
tests/integration/: test_git_integration.py
tests/unit/: test_main.py
tests/utils/: __init__.py  simple_test_runner.py  test_runner.py  validate_tests.py
(+63 files in other folders)
