[project]
name = "github-cli"
version = "0.1.0"
description = "Advanced terminal-based GitHub client"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "GitHub CLI Contributors" }
]
dependencies = [
    "aiohttp>=3.9.0",
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "keyring>=24.0.0",
    "python-dateutil>=2.8.0",
    "loguru>=0.7.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "textual>=0.85.0",
    "textual-dev>=1.2.0",
    "rich-argparse>=1.7.1",
    "pyperclip>=1.9.0",
    "qrcode[pil]>=8.2",
]

[project.scripts]
github-cli = "github_cli.__main__:main_entrypoint"
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "mypy>=1.17.0",
    "types-qrcode>=8.2.0",
    "types-pyperclip>=1.9.0",
    "pytest-cov>=6.2.1",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Allow some flexibility for gradual typing
allow_redefinition = true
allow_untyped_globals = false

# Specific module configurations
[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "textual.*",
    "rich.*",
    "questionary.*",
    "keyring.*",
    "loguru.*",
    "aiohttp.*",
    "httpx.*",
]
ignore_missing_imports = true
